--- a/tipodedatos.html
+++ b/tipodedatos.html
@@ -362,17 +362,21 @@
                                     </div>
                                 </div>
                                 
-                                <div class="relative rounded-xl overflow-hidden" style="aspect-ratio: 16/9;">
-                                    <iframe 
-                                        width="100%" 
-                                        height="100%" 
-                                        src="https://www.youtube.com/embed/FuzP4htWrW0" 
-                                        title="El Viaje de los Datos - ETL en Movilidad" 
-                                        frameborder="0" 
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                        allowfullscreen
-                                        style="border-radius: 12px;">
-                                    </iframe>
+                                <div class="relative rounded-xl overflow-hidden bg-red-600 hover:bg-red-700 transition-all cursor-pointer" style="aspect-ratio: 16/9;" onclick="window.open('https://youtu.be/FuzP4htWrW0?si=O0BC4qApJ07zC0_7', '_blank', 'noopener,noreferrer')">
+                                    <div class="flex items-center justify-center h-full">
+                                        <div class="text-center">
+                                            <div class="text-8xl mb-4 text-white">
+                                                <svg viewBox="0 0 24 24" width="120" height="120" fill="currentColor">
+                                                    <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                                                </svg>
+                                            </div>
+                                            <h3 class="text-2xl font-bold text-white mb-2">Ver en YouTube</h3>
+                                            <p class="text-white opacity-90">El Viaje de los Datos en Movilidad Segura</p>
+                                            <div class="mt-4 bg-white bg-opacity-20 rounded-full px-6 py-2 inline-block">
+                                                <span class="text-white font-semibold">▶ Reproducir Video</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 
                                 <div class="mt-6 grid md:grid-cols-3 gap-4">
@@ -1989,5 +1993,5 @@
             onConfigChange(window.elementSdk.config);
         }
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99901a4b05c8b6ec',t:'MTc2MjIxNzI3Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9990418a30d4492b',t:'MTc2MjIxODg4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
